--- a/style.css
+++ b/style.css
@@ -531,11 +531,13 @@ ul.event-schedule {
         background-position: bottom center; } }
 
 #rsvp-text {
+  width: 50%;
+  min-width: 701px;
   position: absolute;
   bottom: 5%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgba(0, 0, 0, 0.45); }
+  background-color: rgba(0, 0, 0, 0.6); }
   #rsvp-text p {
     padding: 1rem;
     text-align: center; }
@@ -543,12 +545,18 @@ ul.event-schedule {
     #rsvp-text {
       position: relative;
       width: 100%;
+      min-width: initial;
       background-color: #eee; }
       #rsvp-text p {
         color: #222;
         font-size: 1.5rem; }
         #rsvp-text p:last-of-type {
           padding: 3rem 1rem 5rem; } }
+
+#rsvp-iframe {
+  width: 100%;
+  height: 50%;
+  min-height: 550px; }
 
 #registry {
   background: url("images/hero-registry.jpeg") no-repeat 45% 0%;
