--- a/scss/rsvp.scss
+++ b/scss/rsvp.scss
@@ -17,11 +17,13 @@
 }
 
 #rsvp-text {
+	width: 50%;
+	min-width: 701px;
 	position: absolute;
 	bottom: 5%;
 	left: 50%;
 	transform: translateX(-50%);
-	background-color: rgba(0,0,0,.45);
+	background-color: rgba(0,0,0,.6);
 	p {
 		padding: 1rem;
 		text-align: center;
@@ -29,6 +31,7 @@
 	@include mq(less,700) {
 		position: relative;
 		width: 100%;
+		min-width: initial;
 		background-color: #eee;
 		p {
 			color: #222;
@@ -39,3 +42,13 @@
 		}
 	}
 }
+
+#rsvp-iframe {
+	width: 100%;
+	height: 50%;
+	min-height: 550px;
+	
+}
+
+
+
